# LDServer

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Cell.cpp  Dockerfile  Dockerfile-CLion  LDServer.cpp  LDServer.h  Morton.cpp  PyLDServer.cpp  README.md  Raw.cpp  Segment.cpp  Types.h  docker-compose.yml  setup.cfg  tasks.py  tox.ini
.github/workflows/: docker.yml  tests.yml
REST/: requirements.txt  restld.py
REST/config/: default.py
REST/restld/: api.py
core/: CMakeLists.txt  arrow.cmake  boost.cmake  hiredis.cmake  openblas.cmake  requirements.txt  rmath.cmake
core/benchmark/: CMakeLists.txt  benchmark.cpp
core/src/: CMakeLists.txt  Cell.cpp  Cell.h  LDServer.cpp  LDServer.h  Mask.cpp  Mask.h  MetastaarSummaryStatisticsLoader.cpp  MetastaarSummaryStatisticsLoader.h  Morton.cpp  Phenotypes.cpp  Phenotypes.h  RaremetalSummaryStatisticsLoader.cpp  RaremetalSummaryStatisticsLoader.h  Raw.cpp  Raw.h  Regression.cpp  Regression.h  Sandbox.cpp  ScoreCovarianceRunner.cpp  ScoreCovarianceRunner.h  ScoreSegment.cpp  ScoreSegment.h  ScoreServer.cpp  ScoreServer.h  Segment.cpp  Segment.h  SummaryStatisticsLoader.cpp  SummaryStatisticsLoader.h  Types.h  VariantCollator.cpp  VariantCollator.h  pywrapper.cpp
core/tests/: CMakeLists.txt  LDServerTest.cpp  Main_TestAll.cpp  RareMetal.cpp  RareMetal.h  RvTest.cpp  RvTest.h
data/: chr21.test.RAND_QT.singlevar.cov.txt  chr21.test.RAND_QT.singlevar.cov.txt.gz.tbi  chr21.test.RAND_QT.singlevar.score.txt  chr21.test.RAND_QT.singlevar.score.txt.gz.tbi  chr21.test.bcf  chr21.test.frq  chr21.test.missing_genotypes_and_phenotypes.RAND_QT.singlevar.cov.txt  chr21.test.missing_genotypes_and_phenotypes.RAND_QT.singlevar.score.txt  chr21.test.missing_pheno.RAND_QT.singlevar.cov.txt  chr21.test.missing_pheno.RAND_QT.singlevar.score.txt  chr21.test.missing_values.ped  chr21.test.missing_values.tab  chr21.test.missing_values.vcf.gz.tbi  chr21.test.ped  chr21.test.sav.s1r  chr21.test.tab  chr22.monomorphic_test.vcf.gz.tbi  chr22.more_phenotypes.test.ped  chr22.test.bad_float.tab  chr22.test.bcf.csi  chr22.test.frq  chr22.test.sav  chr22.test.sav.s1r  chr22.test.tab  chr22.test.vcf.gz.tbi  chrX.test.sav  chrX.test.sav.s1r  gene.WVAY7.cov.assoc.gz.tbi  gene.WVAY7.scores.assoc.gz.tbi  make_rmw.sh  make_test_ped.py  mask.epacts.chr22.gencode-exons-AF01.tab.gz.tbi  mask.epacts.chr22.gencode-exons-AF05.tab.gz.tbi  metastaar_invalid_metadata.parquet  region_ld_22_50544251_50549251.hap.ld  region_ld_22_51241101_51241385.AFR.hap.ld  region_ld_22_51241101_51241385.hap.ld  region_ld_X_60100_60150.hap.ld  rvtest_cov_fail_base.gz.tbi  rvtest_score_fail_ustat.gz.tbi  (+29 more)
docs/: ldserver-api.md  raremetal-api.md
ld/: CMakeLists.txt  hiredis.cmake  redis.cmake  requirements.txt  tabixpp.cmake
ld/src/: CMakeLists.txt  Cell.cpp  Cell.h  LDServer.cpp  LDServer.h  Mask.cpp  Mask.h  Morton.h  Phenotypes.cpp  Phenotypes.h  RareMetalRunner.cpp  RareMetalRunner.h  Raw.cpp  Raw.h  Sandbox.cpp  ScoreCovarianceRunner.cpp  ScoreCovarianceRunner.h  ScoreSegment.cpp  ScoreServer.cpp  ScoreServer.h  Segment.cpp  Segment.h  Types.h  pywrapper.cpp
ld/tests/: CMakeLists.txt  LDServerTest.cpp  Main_TestAll.cpp  RareMetal.cpp  RareMetal.h
rest/: build.txt  requirements.txt
rest/config/: default.py
rest/ldserver/: __init__.py  api.py  model.py
rest/playground/: __init__.py  web.py
rest/playground/templates/: base.html  home.html
rest/portal/: __init__.py  api.py  model.py
rest/raremetal/: __init__.py  api.py  errors.py  model.py  sentry.py
rest/rest/: __init__.py  api.py  model.py
rest/runtime_tests/: test_runtime.py
rest/tests/: conftest.py  datasets.json  test_api.py
rest/tests/ldserver/: conftest.py  datasets.json  test_api.py
rest/tests/raremetal/: conftest.py  test_cli.py  test_raremetal.py
test/: CMakeLists.txt  LDServerTest.cpp  chr21.test.bcf.csi  chr21.test.sav  chr21.test.vcf.gz.tbi  chr22.test.bcf  chr22.test.bcf.csi  chr22.test.vcf.gz.tbi  example.py  variant_ld_22_51241101_vs_51241101_51241385.hap.ld
